Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57743

Unicode Bidi Algorithm outdated

XMLWordPrintable

      Steps to reproduce the issue:

      1. Run attached test RightLeftTextTest.qml
      2. Observe how text is rendered

      Expected outcome: See Unable to embed resource: bidi_test.html of type text/html in a recent version of Firefox

        1. 4th expected outcome.png
          4th expected outcome.png
          1 kB
        2. bidi_result.png
          bidi_result.png
          138 kB
        3. bidi_test.html
          4 kB
        4. fixed_code_issue.png
          fixed_code_issue.png
          40 kB
        5. issue.png
          issue.png
          222 kB
        6. Qt Creator Version.png
          Qt Creator Version.png
          35 kB
        7. RightLeftTextTest_fixed.tar.gz
          1 kB
        8. RightLeftTextTest.qml
          5 kB
        9. RightLeftTextTest.tar.gz
          1 kB
        10. rtl.png
          rtl.png
          138 kB
        11. webEngine_rendering_result.png
          webEngine_rendering_result.png
          13 kB
        For Gerrit Dashboard: QTBUG-57743
        # Subject Branch Project Status CR V

            laknoll Lars Knoll
            kileppal Kimmo Leppälä
            Votes:
            3 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes